--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -30,7 +30,7 @@
     </div>
     -->
     {% if (base_dir[1] == "en") %}
-      <h2>Associate</h2>
+      <h2>Network partners</h2>
     {% else %}
       <h2>Netzwerkpartner</h2>
     {% endif %}
